--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Robocode Marketplace</h1>
         <div id="cart">
             <button id="cart-button" onclick="openCart()">
-            <img src="img/cart.png" alt="cart">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2d9TvOnmJwypIZmYkcSNyV_f508Z_Kxp-NQ&s" alt="cart">
         </button>
         <div id="cart-products" class="hide">
             Cart is empty
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div id="products-grid">
-            
+
         </div>
     </main>
 </body>
